<resources>
    <string name="app_name">BookITNL</string>
    <string name="title_activity_main">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="chapter_1_abcdef_link">Chapter 1: ABCDEF (link)</string>
    <string name="title_fragment_home">Home</string>
    <string name="title_fragment_search">Search</string>
    <string name="title_fragment_library">Library</string>
    <string name="write_a_comment">Write a comment...</string>
    <string name="no_comment">No comment</string>
    <string name="author">Tác giả</string>
    <string name="search_now">Nhập để tìm kiếm</string>
    <string name="home">Trang chủ</string>
    <string name="search">Tìm kiếm</string>
    <string name="library">Thư viện</string>
    <string name="no_data_found">Không tìm thấy dữ liệu</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_sign_in_short">Đăng ký</string>
    <string name="email">Email</string>
    <string name="minimum_password">Mật khẩu quá ngắn, nhập tối thiểu 6 ký tự! </string>
    <string name="auth_failed">Xác thực thất bại, kiểm tra email và mật khẩu của bạn hoặc đăng ký </string>
    <string name="change_email">Thay đổi email </string>
    <string name="change_password">Thay đổi mật khẩu </string>
    <string name="send_password_reset_email">Gửi email đặt lại mật khẩu</string>
    <string name="remove_user">Xóa người dùng </string>
    <string name="new_pass">Mật khẩu mới</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Đăng nhập</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Mật khẩu</string>
    <string name="hint_repassword"> Nhập lại mật khẩu</string>
    <string name="hint_name">Tên đầy đủ </string>
    <string name="btn_login">ĐĂNG NHẬP </string>
    <string name="btn_link_to_register">Không phải là thành viên? Đăng ký ngay bây giờ! </string>
    <string name="btn_link_to_login">Đã đăng ký. Đăng nhập ngay! </string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password"> Bạn quên mật khẩu?</string>
    <string name="btn_reset_password"> Lấy lại mật khẩu</string>
    <string name="btn_back">Trở về</string>
    <string name="hint_new_email"> Nhập email mới tại đây</string>
    <string name="btn_change">Thay đổi</string>
    <string name="btn_send"> Gửi</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Đăng xuất</string>
    <string name="lbl_forgot_password">Quên mật khẩu</string>
    <string name="forgot_password_msg">Vui lòng nhập và kiểm tra email để khôi phục mật khẩu</string>
</resources>
