<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:fitsSystemWindows="true"
tools:context=".view.usermanager.SignupActivity">

<LinearLayout

    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/app_bar_background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_marginTop="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="BOOK READING"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:gravity="center"

        />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="22sp"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:drawableLeft="@drawable/icons_name"
            />


    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">






</android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <EditText
            android:drawableLeft="@drawable/icons_pass"
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:hint="@string/hint_password"
            android:textSize="22sp"
            android:imeActionId="@+id/login"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@android:color/black"
            tools:ignore="InvalidImeActionId" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <EditText
            android:drawableLeft="@drawable/icons_pass"
            android:id="@+id/repassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:hint="@string/hint_repassword"
            android:imeActionId="@+id/login"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:textSize="22sp"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@android:color/black"
            tools:ignore="InvalidImeActionId" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/sign_up_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@color/white"
        android:text="@string/action_sign_in_short"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:textSize="30sp"
        />

    <Button

        android:id="@+id/btn_reset_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@null"

        android:text="@string/btn_forgot_password"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:textColor="@android:color/black" />

    <!-- Link to Login Screen -->

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:layout_marginTop="0dp"
        android:background="@null"

        android:text="@string/btn_link_to_login"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="20sp" />
</LinearLayout>

<ProgressBar
    android:id="@+id/progressBar"
    android:layout_width="30dp"
    android:layout_height="30dp"
    android:layout_gravity="center|bottom"
    android:layout_marginBottom="20dp"
    android:visibility="gone" />
</android.support.design.widget.CoordinatorLayout>
